# rust-projecteuler

./: .gitignore  Cargo.toml  README.md
pe_0001/src/: lib.rs
pe_0005/src/: lib.rs
pe_0008/: Cargo.toml
pe_0008/src/: lib.rs
pe_0011/: Cargo.toml
pe_0011/src/: lib.rs
pe_0013/: Cargo.toml
pe_0013/src/: lib.rs
pe_0023/: Cargo.toml
pe_0023/src/: lib.rs
pe_0025/: Cargo.toml
pe_0025/src/: lib.rs
pe_0040/: Cargo.toml
pe_0040/src/: lib.rs
pe_0048/: Cargo.toml
pe_0048/src/: lib.rs
pe_digits/: Cargo.toml
pe_digits/src/: lib.rs
pe_itertools/: Cargo.toml
pe_itertools/src/: lib.rs
projecteuler/: Cargo.toml
projecteuler/src/: main.rs
src/: main.rs  pe_0001.rs
