[workspace]
resolver = "2"
members = [
    "projecteuler",
    "pe_digits",
    "pe_itertools",
    "pe_0001",
    "pe_0005",
    "pe_0008",
    "pe_0011",
    "pe_0013",
    "pe_0023",
    "pe_0040",
    "pe_0048",
]

[profile.dev]

[profile.release]
strip = true
lto = true

[workspace.dependencies]
itertools = "0.11"
memoize = "0.4"
num = { version = "0.4", features = ["rand"]  }
rand = "0.8"
